@startuml

package "Banco " <<aggregate>> {
    class Banco <<Entity>> <<root>> {
    }
}

package "Conta " <<aggregate>> {
    class Conta <<Entity>> <<root>>{
    }
}

package "CartaoCredito " <<aggregate>> {
    class CartaoCredito <<Entity>> <<root>>{
    }

    class Periodo <<Value Object>> {
    }

    ' O Cartão define o seu ciclo
    CartaoCredito "1" --> "1" Periodo: define ciclo de
}

package "Transacao " <<aggregate>> {
    class Transacao <<Entity>> <<root>>{
    }

    class Data <<Value Object>> {
    }

    class Reembolso <<Value Object>> {
    }

    class Tipo <<Value Object>> {
    }

    class Status <<Value Object>> {
    }

    class Descricao <<Value Object>> {
    }

    ' Value Objects da Transação
    Transacao "1" --> "1" Data: ocorrida em
    Transacao "1" --> "0..1" Reembolso: pode originar
    Transacao "1" --> "1" Tipo: é do tipo
    Transacao "1" --> "1" Status: encontra-se em
    Transacao "1" --> "1" Descricao: detalhada por
}

package "Agendamento " <<aggregate>> {
    class DespesaRecorrente <<Entity>> <<root>> {
    }
    note bottom of DespesaRecorrente
        Molde para criar
        transações automáticas
    end note
}

package "Categoria " <<aggregate>> {
    class Categoria <<Entity>> <<root>>{
    }
}

package "Shared " <<shared>> {
    class Nome <<Value Object>> {
    }

    class Dinheiro <<Value Object>> {
    }

    class Icon <<Value Object>> {
    }
}


' ==== Ligações entre Agregados (Corrigidas) ====

' 1. A CONTA aponta para o BANCO (tem bancoId) - CORRIGIDO
Conta "0..*" --> "1" Banco: domiciliada em
Conta "1" ---> "0..1" Icon: identificada por
Conta "1" ---> "1" Dinheiro: apresenta saldo
Conta "1" ---> "1" Nome: designada como

' 2. O CARTÃO aponta para a CONTA (tem contaPagamentoId)
CartaoCredito "1" ---> "0..1" Icon: utiliza
CartaoCredito "1" --> "1" Conta: paga fatura via
CartaoCredito "1" ---> "1" Dinheiro: tem limite/saldo
CartaoCredito "1" ---> "1" Nome: apelidado de

' 3. A TRANSAÇÃO aponta para a CONTA ou CARTÃO (tem contaId)
Transacao "0..*" --> "1" Conta: debita/credita em
Transacao "0..*" --> "0..1" CartaoCredito: ou afeta limite de
Transacao "1" --> "1" Categoria: classificada em
Transacao "1" ---> "1" Dinheiro: movimenta

' 4. O AGENDAMENTO aponta para a CONTA (regra futura) - NOVO
DespesaRecorrente "1" --> "1" Conta: será debitada em
DespesaRecorrente "1" --> "1" Categoria: pré-classificada como
DespesaRecorrente "1" --> "1" Nome: nome da regra
DespesaRecorrente "1" --> "1" Dinheiro: valor estimado

' Categoria e Banco (Shared VOs)
Categoria "1" ---> "0..1" Icon: ilustrada por
Categoria "1" ---> "1" Nome: denominada
Banco "1" ---> "0..1" Icon: ostenta marca
Banco "1" ---> "1" Nome: chamado

@enduml